feature(README): instalaciones

--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,7 @@
               }
             ],
             "styles": [
+              "src/custom-theme.scss",
               "src/styles.css"
             ]
           },
@@ -88,5 +89,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "d54c66e7-07cd-4c85-bad2-b1cbaeb2e94f"
   }
 }
